--- a/package.json
+++ b/package.json
@@ -1,64 +1,24 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "slack-native",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VALD04403/slack-native.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/VALD04403/slack-native/issues"
+  },
+  "homepage": "https://github.com/VALD04403/slack-native#readme",
   "dependencies": {
-    "@expo/vector-icons": "^10.0.6",
-    "@types/jest": "^24.0.22",
-    "expo": "^35.0.0",
-    "expo-constants": "^7.0.1",
-    "jest": "^24.9.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.11.0",
-    "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.3.0",
-    "react-native-reanimated": "^1.4.0",
-    "react-native-screens": "^1.0.0-alpha.23",
-    "react-native-web": "^0.11.7",
-    "react-navigation": "^4.0.10",
-    "react-navigation-drawer": "^2.3.3"
-  },
-  "devDependencies": {
-    "babel-eslint": "^10.0.3",
-    "babel-preset-expo": "^7.1.0",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "husky": "^3.0.9",
-    "jest-expo": "^35.0.0",
-    "lint-staged": "^9.4.2",
-    "prettier": "^1.19.1",
-    "react-test-renderer": "^16.8.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && npm test"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
-  },
-  "jest": {
-    "preset": "jest-expo",
-    "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|sentry-expo|native-base)"
-    ]
-  },
-  "private": true
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "pg": "^7.12.1"
+  }
 }
